[ADF-3543] Start Process Component for APS 2

--- a/demo-shell/src/app/components/task-list-cloud-demo/task-list-cloud-demo.component.html
+++ b/demo-shell/src/app/components/task-list-cloud-demo/task-list-cloud-demo.component.html
@@ -84,3 +84,7 @@
                     (changePageSize)="onChangePageSize($event)">
     </adf-pagination>
 </div>
+
+<adf-cloud-start-process 
+   [appName]="applicationName">
+</adf-cloud-start-process>
