Refresh the filters after the action Reset the values after the EditComponentChanges Improve the code

--- a/demo-shell/src/app/components/task-list-cloud-demo/task-list-cloud-demo.component.html
+++ b/demo-shell/src/app/components/task-list-cloud-demo/task-list-cloud-demo.component.html
@@ -1,5 +1,5 @@
 <h2>TASK LIST CLOUD DEMO</h2>
-<adf-cloud-task-filters
+<adf-cloud-task-filters #taskFiltersCloud
     [appName]="applicationName"
     [showIcons]="true"
     (filterClick)="onFilterSelected($event)">
